Re-add msglist.js for reading mail, but only for 80+ column ANSI terminals
Saved w/SCFG supporting multiple loadable modules per loadable module type

--- a/ctrl/main.ini
+++ b/ctrl/main.ini
@@ -129,36 +129,67 @@ stats_interval=5
 
 [module]
 	logon=logon
+	logon.ars=
 	logoff=
+	logoff.ars=
 	newuser_prompts=newuser_prompts
+	newuser_prompts.ars=
 	newuser_info=newuser_info
+	newuser_info.ars=
 	newuser=newuser
+	newuser.ars=
 	usercfg=user_settings
+	usercfg.ars=
 	login=login
+	login.ars=
 	logout=
+	logout.ars=
 	sync=
+	sync.ars=
 	expire=
-	readmail=
+	expire.ars=
+	readmail=msglist mail -preview
+	readmail.ars=ANSI AND COLS 80
 	scanposts=
+	scanposts.ars=
 	scansubs=
+	scansubs.ars=
 	listmsgs=msglist
+	listmsgs.ars=
 	textsec=text_sec
+	textsec.ars=
 	chatsec=chat_sec
+	chatsec.ars=
 	automsg=automsg
+	automsg.ars=
 	feedback=
+	feedback.ars=
 	userlist=userlist
+	userlist.ars=
 	nodelist=nodelist
+	nodelist.ars=
 	whosonline=nodelist -active
+	whosonline.ars=
 	privatemsg=privatemsg
+	privatemsg.ars=
 	logonlist=logonlist
+	logonlist.ars=
 	xtrnsec=xtrn_sec
+	xtrnsec.ars=
 	prextrn=prextrn
+	prextrn.ars=
 	postxtrn=postxtrn
+	postxtrn.ars=
 	scandirs=
+	scandirs.ars=
 	listfiles=
+	listfiles.ars=
 	fileinfo=
+	fileinfo.ars=
 	batxfer=batchxfer
+	batxfer.ars=
 	tempxfer=tempxfer
+	tempxfer.ars=
 [valset:0]
 	level=10
 	expire=0
